[package]
name = "yew-graphql-app"
version = "0.1.0"
authors = ["I_Nosovskiy <mananaxep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
yew = "0.18.0"
wasm-bindgen = "0.2.74"
yew-router = "0.15.0"
yewtil = "0.4"
wasm-logger = "0.2"

instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.7"
log = "0.4"
# getrandom = { version = "0.2", features = ["js"] }
# rand = { version = "0.7", features = ["small_rng", "wasm-bindgen"] }

chrono = { version = "0.4.19", features = ["serde"] }
dotenv_codegen = "0.15.0"
lazy_static = "1.4.0"
# log = "0.4.8"
parking_lot = "0.11.1"
pulldown-cmark = "0.8.0"
serde = "1.0.126"
serde_json = "1.0.64"
thiserror = "1"
cynic = "0.13.2"
anyhow = "1.0.40"
# yew-router = { version="0.14.0", features = ["web_sys"] }
# wasm-bindgen = "0.2.63"
# wasm-logger = "0.2.0"
# wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
]

[dev-dependencies]
js-sys = "0.3.51"
wasm-bindgen-futures = "0.4.24"
wasm-bindgen-test = "0.3.24"
insta = "1.7.1"
